--- a/bbc/requirements/requirements.txt
+++ b/bbc/requirements/requirements.txt
@@ -27,5 +27,5 @@ requests-oauthlib==0.8.0
 six==1.10.0
 social-auth-app-django==1.2.0
 social-auth-core==1.4.0
-urllib3==1.23
+urllib3>=1.24.2
 validate-email==1.3
